[gd_scene load_steps=37 format=2]

[ext_resource path="res://Art/box.png" type="Texture" id=1]
[ext_resource path="res://Art/star.png" type="Texture" id=2]
[ext_resource path="res://Art/circle.png" type="Texture" id=3]
[ext_resource path="res://Art/square.png" type="Texture" id=4]
[ext_resource path="res://Art/triangle.png" type="Texture" id=5]
[ext_resource path="res://Scripts/ShapeSelectBox.gd" type="Script" id=6]
[ext_resource path="res://Art/circle_plane.png" type="Texture" id=7]
[ext_resource path="res://Art/square_plane.png" type="Texture" id=8]
[ext_resource path="res://Art/star_plane.png" type="Texture" id=9]
[ext_resource path="res://Art/triangle_plane.png" type="Texture" id=10]
[ext_resource path="res://Art/box_plane.png" type="Texture" id=11]
[ext_resource path="res://themes/standart/attention_animation_select_box.tres" type="Animation" id=12]
[ext_resource path="res://themes/standart/zoom_in_out_select_box.tres" type="Animation" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.580392, 0.576471, 0.396078, 0.568627 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 148, 148 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 148, 148 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 148, 148 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 148, 148 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 148, 148 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 148, 148 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 148, 148 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 148, 148 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 148, 148 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 516, 516 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 516, 516 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 516, 516 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 150, 150 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=19]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 150, 150 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 150, 150 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.937255, 0.733333, 0, 0.392157 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.937255, 0.733333, 0, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 20

[sub_resource type="Animation" id=23]
resource_name = "screen_in"
tracks/0/type = "value"
tracks/0/path = NodePath("box/HBoxContainer/circle:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 132, 8 ), Vector2( 0, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("box/HBoxContainer/triangle:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 132, 8 ), Vector2( 66, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("box/HBoxContainer/square:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 132, 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("box/HBoxContainer/star:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 132, 8 ), Vector2( 198, 8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("box/HBoxContainer/empty:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 132, 8 ), Vector2( 264, 8 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("box:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[node name="ShapeSelectBox" type="Node2D"]
script = ExtResource( 6 )
square_plane = ExtResource( 8 )
triangle_plane = ExtResource( 10 )
star_plane = ExtResource( 9 )
circle_plane = ExtResource( 7 )
box_plane = ExtResource( 11 )
square = ExtResource( 4 )
triangle = ExtResource( 5 )
star = ExtResource( 2 )
circle = ExtResource( 3 )
box = ExtResource( 1 )

[node name="box" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -33.0
margin_right = 167.0
margin_bottom = 33.0
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 165, 33 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -32.0
margin_right = 156.0
margin_bottom = 34.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circle" type="Button" parent="box/HBoxContainer"]
margin_top = 8.0
margin_right = 50.0
margin_bottom = 58.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 2
size_flags_vertical = 6
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="triangle" type="Button" parent="box/HBoxContainer"]
margin_left = 66.0
margin_top = 8.0
margin_right = 116.0
margin_bottom = 58.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 2
size_flags_vertical = 6
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )

[node name="square" type="Button" parent="box/HBoxContainer"]
margin_left = 132.0
margin_top = 8.0
margin_right = 182.0
margin_bottom = 58.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 2
size_flags_vertical = 6
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )

[node name="star" type="Button" parent="box/HBoxContainer"]
margin_left = 198.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 58.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 2
size_flags_vertical = 6
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 16 )
custom_styles/normal = SubResource( 17 )

[node name="empty" type="Button" parent="box/HBoxContainer"]
margin_left = 264.0
margin_top = 8.0
margin_right = 314.0
margin_bottom = 58.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 2
size_flags_vertical = 6
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/normal = SubResource( 21 )

[node name="box_shadow" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="box_shadow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -29.0
margin_right = 29.0
margin_bottom = 29.0
rect_min_size = Vector2( 58, 58 )
custom_styles/panel = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attention_animation = ExtResource( 12 )
anims/screen_in = SubResource( 23 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/zoom_in_out_select_box = ExtResource( 13 )
[connection signal="pressed" from="box/HBoxContainer/circle" to="." method="_on_circle_pressed"]
[connection signal="pressed" from="box/HBoxContainer/triangle" to="." method="_on_triangle_pressed"]
[connection signal="pressed" from="box/HBoxContainer/square" to="." method="_on_square_pressed"]
[connection signal="pressed" from="box/HBoxContainer/star" to="." method="_on_star_pressed"]
[connection signal="pressed" from="box/HBoxContainer/empty" to="." method="_on_empty_pressed"]
